<resources>
    <string name="app_name">openNews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rewind_music">上一首</string>
    <string name="play_pause_music">暂停</string>
    <string name="forward_music">下一首</string>
    <string name="rewind_news">上一个</string>
    <string name="play_pause_news">暂停</string>
    <string name="forward_news">下一个</string>
    <string name="image_content_description">封面图片</string>
    <string name="back_button_desc">返回按钮</string>
    <string name="previous_music">上一首</string>
    <string name="next_music">下一首</string>
    <string name="content_description_profile_image">Profile Image</string>
    <string name="content_description_settings_button">Settings Button</string>
    <string name="content_description_next_page">menu_info_details</string>
</resources>