<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurface"
    android:elevation="16dp"
    android:padding="16dp">

    <!-- 纯音乐播放控制 -->
    <TextView
        android:id="@+id/textViewMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="播放音乐"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textViewTotalDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textAppearance="?attr/textAppearanceCaption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/seekBarMusic"
        android:paddingStart="8dp" />

    <SeekBar
        android:id="@+id/seekBarMusic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        android:secondaryProgress="75"
        app:layout_constraintTop_toBottomOf="@id/textViewMusic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/textViewCurrentDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textAppearance="?attr/textAppearanceCaption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/seekBarMusic"
        android:paddingEnd="8dp" />

    <!-- 纯音乐播放控制 -->
    <LinearLayout
        android:id="@+id/musicControls"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/seekBarMusic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp">

        <ImageButton
            android:id="@+id/buttonPreviousMusic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/previous_music"
            android:src="@android:drawable/ic_media_previous"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/buttonRewindMusic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rewind_music"
            android:src="@android:drawable/ic_media_rew"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/buttonPlayPauseMusic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/play_pause_music"
            android:src="@android:drawable/ic_media_pause"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/buttonForwardMusic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/forward_music"
            android:src="@android:drawable/ic_media_ff"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/buttonNextMusic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next_music"
            android:src="@android:drawable/ic_media_next"
            android:layout_weight="1"/>
    </LinearLayout>

    <!-- 新闻文本播放控制 -->
    <TextView
        android:id="@+id/textViewNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="朗读新闻"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintTop_toBottomOf="@id/musicControls"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:id="@+id/newsControls"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/textViewNews"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/buttonRewindNews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rewind_news"
            android:src="@android:drawable/ic_media_rew"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/buttonPlayPauseNews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/play_pause_news"
            android:src="@android:drawable/ic_media_pause"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/buttonForwardNews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/forward_news"
            android:src="@android:drawable/ic_media_ff"
            android:layout_weight="1"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>